Changing to jdk 15
Also adding install script